--- a/package.json
+++ b/package.json
@@ -3,20 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3500",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3500",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^6.0.10",
+    "@mantine/dates": "^6.0.10",
+    "@mantine/form": "^6.0.10",
+    "@mantine/hooks": "^6.0.10",
+    "@mantine/next": "^6.0.10",
+    "@tanstack/react-query": "^4.29.5",
     "@types/node": "18.16.3",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.3",
+    "cookies-next": "^2.1.1",
+    "dayjs": "^1.11.7",
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.8.0",
+    "typescript": "5.0.4",
+    "xlsx": "^0.18.5",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.29.4",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
